--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,14 +4,18 @@ cjdns_install: false
 cjdns_package_state: "present"
 cjdns_packages: "{{ __cjdns_packages }}"
 
-cjdns_configure: false
-cjdns_user: "{{ __cjdns_user }}"
-cjdns_group: "{{ __cjdns_group }}"
-
 cjdns_service: false
 cjdns_service_name: "{{ __cjdns_service_name }}"
 cjdns_service_state: "started"
 cjdns_service_enabled: true
+
+cjdns_configure: false
+cjdns_owner: "{{ __cjdns_owner }}"
+cjdns_group: "{{ __cjdns_group }}"
+
+cjdns_restart_timer: false
+cjdns_restart_timer_name: "{{ __cjdns_restart_timer_name }}"
+cjdns_restart_timer_enabled: true
 
 cjdns_private_key: ""
 cjdns_public_key: ""
